# PDS-Aulas

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: compile-typst.yml  deploy-mkdocs.yml
assets/: custom.css
data/: pds-plano.json
docs/: index.md
docs/assets/: custom.css  image-kernels.js
docs/overrides/partials/: copyright.html  footer.html
docs/stylesheets/: extra.css
notebooks/: convolution-kirby.ipynb
pds-01-sinais-de-tempo-discreto/: pds-01-sinais-de-tempo-discreto.typ
pds-02-sistemas-de-tempo-discreto/: pds-02-sistemas-de-tempo-discreto.typ
pds-parte-1/: pds-parte-1.typ
pds-plano-de-aula/: pds-plano-de-aula.typ
plano-de-aula/: pds-plano-de-aula-2026.typ
search/: search_index.json
